# isbnsrv

./: .dockerignore  .flake8  .gitignore  .hadolint.yaml  .isort.cfg  .pre-commit-config.yaml  .yamllint  CHANGES.txt  COPYRIGHT.txt  Dockerfile  Dockerfile-test  README.md  pyproject.toml  pytest.ini  release.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/automation/: greetings.yml
.github/workflows/: basictests.yml
isbnsrv/: __init__.py  aiohttp_server.py  async_imcache.py  cache.py  graphql.py  graphql_aiohttp.py  graphql_api.py  resources.py  rest.py  schema.graphql  server.py  utils.py
isbnsrv/gql/: aiohttp.py  api.py  schema.graphql  typedefs.py  utils.py
isbnsrv/graphql/: aiohttp.py  api.py  schema.graphql  utils.py
isbnsrv/rest/: rest.py
tests/: test_api.py  test_isbnsrv.py  test_version.py
