[tool.poetry]
name = "isbnsrv"
version = "0.1.0"
description = "isbnlib as a microservice."
license = "LGPL-3.0"
authors = ["Alexandre Conde <alexandreconde@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
cchardet = "^2.1"
aiodns = "^2.0"
isbnlib = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pre-commit = "^1.16"
radon = "^3.0"

[tool.black]
line-length = 95
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
