[tool.poetry]
name = "isbnsrv"
version = "1.1.1"
description = "isbnlib as a microservice."
license = "LGPL-3.0"
authors = ["xlcnd@outlook.com"]
readme = "README.md"
repository = "https://github.com/xlcnd/isbnsrv"
keywords = ['isbnlib', 'microservice', 'rest', 'graphql']

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7"
cchardet = "^2.1"
aiodns = "^2.0"
isbnlib = "^3.10"
graphene = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-aiohttp = "^0.3.0"
flake8 = "^3.8"
pre-commit = "^2.10"
radon = "^4.3"
invoke = "^1.5"

[tool.black]
line-length = 95
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/xlcnd/isbnsrv/issues"
