[metadata]
license_file = LICENSE-LGPL.txt


[bdist_wheel]
universal=1


[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore=D105,D107,N806,I100,I101,I201,N802,C812,C901,E722,E741,E501,W503
exclude=*/test/*
max-complexity=10


[pep257]
ignore=D203


[doc8]
max-line-length=120
verbose=1


[nosetests]
verbosity=1
with-coverage=1
cover-package=isbnsrv
cover-branches=1
cover-min-percentage=90

